// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> render Button with custom Background color 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "white",
      "color": "black",
      "opacity": 1,
      "paddingBottom": 5,
      "paddingLeft": 5,
      "paddingRight": 5,
      "paddingTop": 5,
    }
  }
>
  <Text
    bg="red"
    style={
      Array [
        Object {
          "color": "#000",
          "fontSize": 20,
          "fontWeight": "bold",
        },
        undefined,
      ]
    }
  >
    , Bem vindo
  </Text>
</View>
`;

exports[`<Button /> render Button with custom name 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "white",
      "color": "black",
      "opacity": 1,
      "paddingBottom": 5,
      "paddingLeft": 5,
      "paddingRight": 5,
      "paddingTop": 5,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#000",
          "fontSize": 20,
          "fontWeight": "bold",
        },
        undefined,
      ]
    }
  >
    João
    , Bem vindo
  </Text>
</View>
`;
